--- a/MohammadAliModule10/src/main/res/values/strings.xml
+++ b/MohammadAliModule10/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="designed_by_mohammadali_fouladi_n01547173">Designed by MohammadAli Fouladi N01547173©</string>
+    <string name="moe">Moe</string>
+    <string name="fouladi">Fouladi</string>
+    <string name="n01547173">N01547173</string>
 </resources>
