Added first fragment with spinner download

--- a/MohammadAliModule10/src/main/res/values/strings.xml
+++ b/MohammadAliModule10/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="moe">Moe</string>
     <string name="fouladi">Fouladi</string>
     <string name="n01547173">N01547173</string>
+    <string name="Fullnameid">MohammadAli Fouladi N01547173</string>
+    <string name="download_image">Download image</string>
 </resources>
