--- a/MohammadAliModule10/src/main/res/values/strings.xml
+++ b/MohammadAliModule10/src/main/res/values/strings.xml
@@ -12,6 +12,11 @@
     <string name="fahrenheit">Fahrenheit</string>
     <string name="error_fetching_weather_data">Error fetching weather data</string>
     <string name="http_status_code">"HTTP status code: "</string>
-</resources>
-    <!-- MohammadAli Fouladi N01547173-->
-    <!-- before french -->
+
+    <string-array name="Moevideo_descriptions">
+        <item>Pewdieoie</item>
+        <item>The Walking Dead</item>
+        <item>The Boys</item>
+    </string-array>
+</resources><!-- MohammadAli Fouladi N01547173-->
+
