--- a/MohammadAliModule10/src/main/res/values/strings.xml
+++ b/MohammadAliModule10/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="error_fetching_weather_data">Error fetching weather data</string>
     <string name="http_status_code">"HTTP status code: "</string>
     <string name="video_description">Video Description</string>
+    <string name="m4f">M4F</string>
 
     <string-array name="Moevideo_descriptions">
         <item>Pewdieoie</item>
